2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Tighten up the places where we
	  emit validation errors. Fixes some more of 232.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Only emit data errors if
	  ValidatesOnDataErrors is true. Also check for data errors
	  when the PropertyPathWalker value updates.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* IPropertyPathNode.cs:
	* BindingExpressionBase.cs: Put in initial support for
	  IDataErrorInfo objects. Passes the basic tests in drt 232.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: We now pass all the V3 Validation
	  tests in drt 232. hurrah!

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Update our implementation of
	  mentors to allow us to listen for changes to the mentor and
	  correctly NULL it out when the mentor is destroyed as if we
	  were to ref the mentor we'd create a cycle.

2010-06-01  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Implement the first section of
	  mentor based databinding. When doing DataContext based
	  bindings on DependencyObjects, we get the DataContext from
	  the first FrameworkElement in the actual tree (not visual
	  tree). This FE is known as the 'mentor'. 

2010-05-31  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: We should only seal the binding
	  after all validation is successful. Add in a missing sanity
	  check to make sure two way bindings don't have a stupid
	  path.

2010-05-31  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: we aren't guaranteed that the item
	  is a FrameworkElement now so add in some debug spew for
	  cases where we add DataContext based bindings on
	  DependencyObjects (like brushes).

2010-05-31  Alan McGovern  <amcgovern@novell.com>

	* CollectionViewNode.cs: If the CollectionViewNode is given an